linter/src/snapshots/squawk_linter__test_rules__renaming_column.snap
---
source: linter/src/lib.rs
expression: "check_sql(sql, &[])"
---
Ok(
    [
        RuleViolation {
            kind: RenamingColumn,
            span: Span {
                start: 0,
                len: Some(
                    74,
                ),
            },
            messages: [
                Note(
                    "Renaming a column may break existing clients.",
                ),
            ],
        },
    ],
)
