linter/src/snapshots/squawk_linter__test_rules__rule_names_display_snap.snap
---
source: linter/src/lib.rs
expression: "rule_names.join(\"\\n\")"
---
adding-field-with-default
adding-foreign-key-constraint
adding-not-nullable-field
adding-serial-primary-key-field
ban-char-field
ban-drop-column
ban-drop-database
changing-column-type
constraint-missing-not-valid
disallowed-unique-constraint
prefer-big-int
prefer-identity
prefer-robust-stmts
prefer-text-field
prefer-timestamptz
renaming-column
renaming-table
require-concurrent-index-creation
require-concurrent-index-deletion
